@@ -6,7 +6,7 @@
 
 <widget class="GtkDialog" id="window">
   <property name="border_width">2</property>
-  <property name="title" translatable="yes">Overwrite File</property>
+  <property name="title" translatable="yes">Overwrite File?</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
@@ -75,7 +75,7 @@
 	  <child>
 	    <widget class="GtkImage" id="image1">
 	      <property name="visible">True</property>
-	      <property name="stock">gtk-dialog-warning</property>
+	      <property name="stock">gtk-dialog-question</property>
 	      <property name="icon_size">6</property>
 	      <property name="xalign">0.5</property>
 	      <property name="yalign">0</property>
@@ -97,7 +97,7 @@
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">False</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
-	      <property name="wrap">False</property>
+	      <property name="wrap">True</property>
 	      <property name="selectable">True</property>
 	      <property name="xalign">0</property>
 	      <property name="yalign">0.5</property>
